# choose

./: .gitignore  Cargo.toml  Makefile  benchmarking.md  contributing.md  readme.md
.cargo/: config  config.toml
.github/workflows/: crates.yml  release.yml  rust.yml
src/: choice.rs  config.rs  error.rs  errors.rs  escape.rs  main.rs  opt.rs  parse.rs  parse_error.rs  reader.rs  result.rs  writeable.rs  writer.rs
src/choice/: mod.rs
src/choice/test/: get_negative_start_end.rs  is_reverse_range.rs  literal_separators.rs  mod.rs  print_choice.rs
test/: alphabet.txt  bench.sh  choose_-1.txt  choose_-2.txt  choose_-4:-2.txt  choose_0_3.txt  choose_0_3_c.txt  choose_12.txt  choose_1_3of%.txt  choose_1_3of.txt  choose_1x-1.txt  choose_1x-2.txt  choose_1x3of%.txt  choose_2_x.txt  choose_4x2.txt  choose_9.txt  choose_9_3.txt  choose_:2.txt  choose_colon_1.txt  colons.txt  crlf.txt  crlf_output.txt  e2e_test.sh  test.sh
